--- a/package.json
+++ b/package.json
@@ -1,8 +1,65 @@
 {
-  "name": "@ng-cropper/source",
-  "version": "0.0.0",
+  "name": "@dg/ng-cropper",
+  "version": "1.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "=========== Development ===========": "",
+    "dev": "nx serve ng-cropper-playground",
+    "dev:lib": "nx build ng-cropper --watch",
+    "start": "npm run dev",
+    "=========== Build ===========": "",
+    "build": "nx run-many -t build --parallel --skip-nx-cache",
+    "build:lib": "nx build ng-cropper",
+    "build:app": "nx build ng-cropper-playground",
+    "build:prod": "nx run-many -t build --configuration=production",
+    "build:watch": "nx run-many -t build --watch",
+    "=========== Testing ===========": "",
+    "test": "nx run-many -t test",
+    "test:lib": "nx test ng-cropper",
+    "test:app": "nx test ng-cropper-playground",
+    "test:watch": "nx run-many -t test --watch",
+    "test:coverage": "nx run-many -t test --coverage",
+    "test:ci": "nx run-many -t test --ci --coverage --watchAll=false",
+    "=========== Code Quality ===========": "",
+    "lint": "nx run-many -t lint",
+    "lint:lib": "nx lint ng-cropper",
+    "lint:app": "nx lint ng-cropper-playground",
+    "lint:fix": "nx run-many -t lint --fix",
+    "format": "nx format:write",
+    "format:check": "nx format:check",
+    "type-check": "nx run-many -t type-check",
+    
+    "=========== Storybook ===========": "",
+    "storybook": "nx storybook ng-cropper",
+    "storybook:build": "nx build-storybook ng-cropper",
+    "storybook:test": "nx test-storybook ng-cropper",
+    "storybook:static": "nx static-storybook ng-cropper",
+    
+    "=========== Nx Affected ===========": "",
+    "affected:build": "nx affected -t build",
+    "affected:test": "nx affected -t test",
+    "affected:lint": "nx affected -t lint",
+    "affected:graph": "nx affected:graph",
+    "=========== Utilities ===========": "",
+    "graph": "nx graph",
+    "dep-graph": "nx dep-graph",
+    "workspace-generator": "nx workspace-generator",
+    "show:projects": "nx show projects",
+    "=========== Cleanup ===========": "",
+    "clean": "nx reset && rm -rf dist node_modules/.cache",
+    "clean:dist": "rm -rf dist",
+    "clean:cache": "nx reset",
+    "clean:modules": "rm -rf node_modules && pnpm install",
+    "=========== Release & Publish ===========": "",
+    "prepare:release": "nx run-many -t build --configuration=production && nx run-many -t test && nx run-many -t lint",
+    "release": "nx release",
+    "release:dry-run": "nx release --dry-run",
+    "version": "nx release version",
+    "version:dry-run": "nx release version --dry-run",
+    "publish": "nx release publish",
+    "publish:dry-run": "nx release publish --dry-run",
+    "local-registry": "nx local-registry"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "~20.1.0",
@@ -31,12 +88,14 @@
     "@nx/jest": "21.3.11",
     "@nx/js": "21.3.11",
     "@nx/rspack": "21.3.11",
+    "@nx/storybook": "21.3.11",
     "@nx/web": "21.3.11",
     "@nx/workspace": "21.3.11",
     "@rspack/cli": "^1.3.8",
     "@rspack/core": "^1.3.8",
     "@rspack/dev-server": "1.1.1",
     "@schematics/angular": "~20.1.0",
+    "@storybook/angular": "9.1.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -44,20 +103,31 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.29.0",
     "angular-eslint": "^20.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
     "jest-preset-angular": "~15.0.0",
     "jest-util": "^30.0.2",
+    "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~20.1.0",
     "nx": "21.3.11",
+    "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "storybook": "9.1.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.29.0",
+    "verdaccio": "^6.0.5",
     "webpack-merge": "^5.8.0"
   },
-  "packageManager": "pnpm@8.11.0+sha1.01bf39424f1008f29012bbae851d2acb8a20a0d0"
+  "packageManager": "pnpm@8.11.0+sha1.01bf39424f1008f29012bbae851d2acb8a20a0d0",
+  "nx": {
+    "includedScripts": []
+  }
 }
