--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,7 @@
-# Add files here to ignore them from prettier formatting
-/dist
-/coverage
-/.nx/cache
-/.nx/workspace-data
+# Ignore artifacts:
+build
+coverage
+node_modules
+temp
+.nx
 .angular
