--- a/package.json
+++ b/package.json
@@ -28,13 +28,11 @@
     "format": "nx format:write",
     "format:check": "nx format:check",
     "type-check": "nx run-many -t type-check",
-    
     "=========== Storybook ===========": "",
     "storybook": "nx storybook ng-cropper",
     "storybook:build": "nx build-storybook ng-cropper",
     "storybook:test": "nx test-storybook ng-cropper",
     "storybook:static": "nx static-storybook ng-cropper",
-    
     "=========== Nx Affected ===========": "",
     "affected:build": "nx affected -t build",
     "affected:test": "nx affected -t test",
@@ -69,6 +67,7 @@
     "@angular/platform-browser": "~20.1.0",
     "@angular/platform-browser-dynamic": "~20.1.0",
     "@angular/router": "~20.1.0",
+    "cropperjs": "^2.0.1",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -115,7 +114,7 @@
     "nx": "21.3.11",
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.8",
     "storybook": "9.1.2",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.4.0",
