fix: update project.json to include styles option and remove unused SCSS import

--- a/libs/ng-cropper/project.json
+++ b/libs/ng-cropper/project.json
@@ -17,7 +17,8 @@
       "executor": "@nx/angular:package",
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
-        "project": "libs/ng-cropper/ng-package.json"
+        "project": "libs/ng-cropper/ng-package.json",
+        "styles": ["node_modules/cropperjs/dist/cropper.css"]
       },
       "configurations": {
         "production": {
