--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.29.0",
     "angular-eslint": "^20.0.0",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^30.0.2",
@@ -113,11 +113,12 @@
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "~20.1.0",
     "nx": "21.3.11",
-    "postcss": "^8.4.5",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
     "postcss-url": "~10.1.3",
     "prettier": "^2.8.8",
     "storybook": "9.1.2",
-    "tailwindcss": "^3.0.2",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
