feat: Refactor NgCropper component and add Toolbar for enhanced image cropping functionality
- Updated NgCropper.html to simplify structure and improve readability.
- Introduced design tokens in NgCropper.scss for better styling management.
- Enhanced NgCropper.ts with input configurations for canvas, image, shade, selection, grid, crosshair, and handles.
- Added Toolbar component with rotation, zoom, and crop functionalities.
- Implemented unit tests for Toolbar component.
- Updated public API to export new Toolbar component and related types.
- Added lucide-angular for icon support in the Toolbar.

--- a/libs/ng-cropper/project.json
+++ b/libs/ng-cropper/project.json
@@ -17,8 +17,7 @@
       "executor": "@nx/angular:package",
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
-        "project": "libs/ng-cropper/ng-package.json",
-        "styles": ["node_modules/cropperjs/dist/cropper.css"]
+        "project": "libs/ng-cropper/ng-package.json"
       },
       "configurations": {
         "production": {
