--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@angular/platform-browser-dynamic": "~20.1.0",
     "@angular/router": "~20.1.0",
     "cropperjs": "^2.0.1",
+    "lucide-angular": "^0.539.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
