fix: update paths for NgCropper imports and implicit dependencies in project configuration

--- a/apps/ng-cropper-playground/project.json
+++ b/apps/ng-cropper-playground/project.json
@@ -5,6 +5,7 @@
   "prefix": "app",
   "sourceRoot": "apps/ng-cropper-playground/src",
   "tags": [],
+  "implicitDependencies": ["ng-cropper"],
   "targets": {
     "build": {
       "executor": "@nx/rspack:rspack",
