--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
         "skipDefaultLibCheck": true,
         "baseUrl": ".",
         "paths": {
-            "@dg/ng-cropper": ["libs/ng-cropper/src/index.ts"]
+            "@dg/ng-cropper": ["dist/libs/ng-cropper"]
         }
     },
     "exclude": ["node_modules", "tmp"]
