--- a/apps/ng-cropper-playground/project.json
+++ b/apps/ng-cropper-playground/project.json
@@ -79,6 +79,14 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "apps/ng-cropper-playground/jest.config.ts",
+        "passWithNoTests": true
+      }
+    },
     "serve-static": {
       "continuous": true,
       "executor": "@nx/web:file-server",
