feat(toolbar): enhance toolbar functionality with dynamic tool visibility and SVG icons
- Refactored Toolbar component to support dynamic visibility of tools based on user configuration.
- Introduced new icon templates for rotate left, rotate right, zoom in, zoom out, crop, and reset actions.
- Added Tooltip and IconViewer templates for better code organization and reusability.
- Created a new constants file for default toolbar icons.
- Implemented a SafeHTML pipe for sanitizing SVG icons.
- Updated NgCropper configuration to include toolbar settings and initial state.

--- a/libs/ng-cropper/package.json
+++ b/libs/ng-cropper/package.json
@@ -34,14 +34,16 @@
     "fesm2022": "fesm2022/dg-ng-cropper.mjs",
     "typings": "index.d.ts",
     "peerDependencies": {
-        "@angular/common": "^20.1.0",
-        "@angular/core": "^20.1.0",
-        "@angular/platform-browser": "^20.1.0",
-        "@angular/elements": "^20.1.0",
-        "cropperjs": "^2.0.1",
-        "lucide-angular": "^0.539.0"
+        "@angular/common": ">=17.1.0",
+        "@angular/core": ">=17.1.0",
+        "@angular/elements": ">=17.1.0",
+        "cropperjs": "^2.0.1"
     },
     "dependencies": {},
+    "funding": {
+        "type": "individual",
+        "url": "https://buymeacoffee.com/danielgabbay"
+    },
     "publishConfig": {
         "access": "public"
     },
