--- a/apps/ng-cropper-playground/project.json
+++ b/apps/ng-cropper-playground/project.json
@@ -40,6 +40,7 @@
           "sourceMap": false,
           "namedChunks": false,
           "extractLicenses": true,
+          "baseHref": "/playground/",
           "budgets": [
             {
               "type": "initial",
