--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
         run: npx nx build-storybook ng-cropper
         
       - name: Build playground
-        run: npx nx build ng-cropper-playground --configuration=production --base-href="/playground/"
+        run: npx nx build ng-cropper-playground --configuration=production --base-href="/ng-cropper/playground/"
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
