--- a/libs/ng-cropper/package.json
+++ b/libs/ng-cropper/package.json
@@ -37,10 +37,11 @@
         "@angular/common": ">=17.1.0",
         "@angular/core": ">=17.1.0",
         "@angular/elements": ">=17.1.0",
-        "@angular/platform-browser": ">=17.1.0",
+        "@angular/platform-browser": ">=17.1.0"
+    },
+    "dependencies": {
         "cropperjs": "^2.0.1"
     },
-    "dependencies": {},
     "funding": {
         "type": "individual",
         "url": "https://buymeacoffee.com/danielgabbay"
